# anchor-defi-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
contracts/sniper-bot/src/: NewContract.sol
crates/anchorblock/: Cargo.toml
crates/design-patterns/: Cargo.toml
crates/design-patterns/src/: main.rs
examples/alloy-rs-practice/: Cargo.toml
examples/alloy-rs-practice/src/: init.rs
examples/mev-arb-bot/: Cargo.toml
web-apps/anchor-web/: package-lock.json  package.json
web-apps/course-ui/: README.md  auth.ts  package.json
web-apps/course-ui/app/: layout.tsx  page.tsx
web-apps/course-ui/app/(root)/: layout.tsx
web-apps/course-ui/app/components/: Navbar.tsx  sign-in.tsx
