[workspace]
members = [
    "bin/cli", "bin/mev-sniper", 
    "crates/anchorblock", "crates/design-patterns", "examples/alloy-rs-practice",  
    "examples/mev-arb-bot"
    ]

default-members = [
    "bin/cli"
]

resolver = "2"


[workspace.dependencies]
alloy = {version = "0.6.4", features = ["full"]}
tokio = {version = "1", features = ["full"]}
eyre = "0.6.12"
